fix: added z-index to header__overlay and changed padding-top to padding-block for header__body

--- a/app/styles/components/Header.scss
+++ b/app/styles/components/Header.scss
@@ -107,7 +107,7 @@
             display: grid;
             grid-template-columns: 1fr auto;
             row-gap: rem(10);
-            padding-top: rem(10);
+            padding-block: rem(10);
         }
 
         @include mobile {
@@ -214,6 +214,7 @@
         padding: 1rem;
         row-gap: 2rem;
         transition-duration: var(--transition-duration);
+        z-index: 10;
 
         &.is-active {
             @include show;
